--- a/balawo-gateway/pom.xml
+++ b/balawo-gateway/pom.xml
@@ -68,6 +68,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.76</version>
+        </dependency>
+
 
 
     </dependencies>
