--- a/balawo-oauth2/src/main/resources/application.yml
+++ b/balawo-oauth2/src/main/resources/application.yml
@@ -1,11 +1,9 @@
 server:
-  port: 9002
+  port: 9003
 
 spring:
   application:
-    name: balawo-oauth
-  main:
-    allow-bean-definition-overriding: true
+    name: balawo-oauth2
   redis:
     database: 0
     host: localhost #加入哨兵后，此项可以不配置
@@ -18,3 +16,6 @@ spring:
         max-wait: -1      # 连接池最大阻塞等待时间（使用负值表示没有限制）
         max-idle: 10      # 连接池中的最大空闲连接
         min-idle: 5       # 连接池中的最小空闲连接
+
+
+
