--- a/balawo-gateway/pom.xml
+++ b/balawo-gateway/pom.xml
@@ -74,6 +74,17 @@
             <version>1.2.76</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.balawo</groupId>-->
+<!--            <artifactId>balawo-oauth</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
+
 
 
     </dependencies>
